--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_chromecast
-version: 0.2.4
+version: 0.3.0
 description: Cast videos to your ChromeCast device using Dart
 homepage: https://github.com/terrabythia/dart_chromecast
 
@@ -7,12 +7,12 @@ environment:
   sdk: '>=2.3.0 <3.0.0'
 
 dependencies:
-  protobuf: '>=1.0.1 <2.0.0'
-  protoc_plugin: ^19.0.0
-  http: ^0.12.2
-  cli_util: ^0.2.0
-  args: ^1.6.0
-  xml: ^4.1.1
-  observable: ^0.22.2
-  logging: ^0.11.4
-  multicast_dns: ^0.2.2
+  protobuf: ^2.0.0
+  protoc_plugin: ^20.0.0
+  http: ^0.13.1
+  cli_util: ^0.3.0
+  args: ^2.0.0
+  xml: ^5.1.0
+  observable: ^0.23.0
+  logging: ^1.0.1
+  multicast_dns: ^0.3.0
