--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,13 @@ description: Pure dart package to cast videos to your ChromeCast device and cont
 homepage: https://github.com/terrabythia/dart_chromecast
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ^2.12.0
 
 dependencies:
-  protobuf: ^2.0.0
-  http: ^0.13.1
-  cli_util: ^0.3.0
-  args: ^2.0.0
-  xml: ^5.1.0
-  logging: ^1.0.1
-  multicast_dns: ^0.3.0
+  protobuf: ^2.0.1
+  http: ^0.13.4
+  cli_util: ^0.3.5
+  args: ^2.3.0
+  xml: ^5.3.1
+  logging: ^1.0.2
+  multicast_dns: ^0.3.1
