--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_chromecast
-version: 0.3.1
+version: 0.3.2
 description: Pure dart package to cast videos to your ChromeCast device and control their playback
 homepage: https://github.com/terrabythia/dart_chromecast
 
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
+  universal_io: ^2.0.4
   protobuf: ^2.0.1
   http: ^0.13.4
   cli_util: ^0.3.5
