--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,10 @@ environment:
 
 dependencies:
   universal_io: ^2.0.4
-  protobuf: ^2.0.1
-  http: ^0.13.4
+  protobuf: ^2.1.0
+  http: ^0.13.5
   cli_util: ^0.3.5
-  args: ^2.3.0
+  args: ^2.3.1
   xml: ">=5.3.1 <7.0.0"
-  logging: ^1.0.2
-  multicast_dns: ^0.3.1
+  logging: ^1.1.0
+  multicast_dns: ^0.3.2+2
